.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    service: server
spec:
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 3000
      targetPort: 3000
